style.css
/* ... */
[hidden] {
	display: none !important;
}

/**********
 ** Flex **
 **********/
.flex {
	display: block;
	display: -webkit-flex;
	display: flex;
	-webkit-flex-direction: column;
	flex-direction: column;
}
.flex-row {
	display: inline-block;
	display: -webkit-flex;
	display: flex;
}
.flex > *, .flex-row > * {
	-webkit-flex-shrink: 0;
	flex-shrink: 0;
}
.grow {
	-webkit-flex-grow: 1;
	flex-grow: 1;
	-webkit-flex-shrink: 1;
	flex-shrink: 1;
	-webkit-flex-basis: 0;
	flex-basis: 0;
}

.flex-sized {
	webkit-flex-shrink: 1;
	flex-shrink: 1;
}

/*********/

/* all elements with user content, where whitespace should be preserved */
.pre {
	white-space: pre-wrap;
	unicode-bidi: embed;
}

/***********
 ** Links **
 ***********/
a {
	text-decoration: none;
	color: rgba(0,60,54);
}
a:visited {
	color: rgba(0,60,54);
}
a:hover {
	color: rgb(0,150,136);
	/*text-decoration: underline;*/
}
a:hover .entity-title,
a.entity-title:hover,
a[data-static-path]:hover {
	text-decoration: underline;
}
/* todo: make a special link bar class for links that contain other elements and a class for which of those should be underlined */
/* and make sure normal links are styled correctly too */
a[data-static-path],
.entity-title {
	font-weight: 500;
}

/* todo: make class for dark bg elements */
.titlePane a {
	color: #DEF;
	font-weight: normal;
}
.titlePane a:hover {
	color: #EFF;
}

h1 {
	font-size: 1.6em;
}

/**********/

textarea {
	border-radius: 2px;
	border: 2px solid #00C8B4;
	box-shadow: 0.1rem 0.2rem 0.3rem -0.2rem rgba(13,13,13,0.5);
	max-width: 100%;
	font-family: roboto, sans-serif;
	font-size: 0.8em;
}

select {
	font-size: 1em;
}

sup {vertical-align: super;}
sub {vertical-align: sub;}

.avatar {
	height: 1rem; /*default*/
	border: 1px solid white;
	border-radius: 3px;
	background-color: white;
}

.ellipsis {
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: pre !important;
}

.ellipsis * {
	white-space: pre !important;
}

time {
	color: #333;
	font-size: 0.9em;
	vertical-align: baseline;
}

.rightAlign {
	float: right;
}

.markup-root { /* make sure this is before most things */
	padding: 0.5rem;
}

#\$categoryDescription.markup-root { /* make sure this is before most things */
	padding: .75rem 1rem;
}

body.chatMode .bottomSpacer {
	display: none;
}

.username {
	font-weight: bold;
	unicode-bidi: embed;
	white-space: pre-wrap;
}

input {
	font-size: 0.8em;
}

html {
	background-color: #FEE;
	font-family: roboto, fontello, sans-serif;
	position: fixed;
}

body {
	position: fixed;
	overflow: hidden;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: white;
	/*height: 100vh;*/ /* @@@ */
}

.fill {
	width: 100%;
	height: 100%;
}

/*********
 ** Bar **
 *********/
/* These 3 classes handle like 90% of the layout lol */
.bar { /* contains textitems and items */
	display: block;
	overflow: hidden;
	box-sizing: content-box;
	-webkit-box-sizing: content-box;
	/* set min-height */
}

.textItem { /* basically anything within a .bar */
	max-width: 100%;
	display: inline;
	/* set min-height, line-height */
}
.item { /* for images and other blocks that can't wrap */
	display: inline-block;
	max-width: 100%;
	/* set height */
}

.rem1-7 {
	min-height: 1.7rem;
	line-height: 1.7rem;
}
.rem1-7 .item {
	height: 1.7rem;
	line-height: 1.7rem;
}
.rem1-7 .textItem {
	min-height: 1.7rem;
	line-height: 1.7rem;
}
.rem1-7 .avatar {
	width: 1.7rem;
}
.rem1-7 .iconBg {
	width: 1rem;
	/*margin-right: 0.2rem;*/
}

.rem1-5 {
	min-height: 1.5rem;
	line-height: 1.5rem;
}
.rem1-5 .item {
	height: 1.5rem;
	line-height: 1.5rem;
}
.rem1-5 .textItem {
	min-height: 1.5rem;
	line-height: 1.5rem;
}
.rem1-5 .avatar {
	width: 1.5rem;
}
.rem1-5 .iconBg {
	width: 1rem;
	/*margin-right: 0.2rem;*/
}

.rem2-3 {
	min-height: 2.3rem;
	line-height: 2.3rem;
}
.rem2-3 .item {
	height: 2.3rem;
	line-height: 2.3rem;
}
.rem2-3 .textItem {
	min-height: 2.3rem;
	line-height: 2.3rem;
}
.rem2-3 .avatar {
	width: 2.3rem;
}
.rem2-3 .iconBg {
	width: 1.5rem;
}

/**********************
 ** Button Container **
 **********************/
button {
	line-height: normal !important;
	font-size: 0.8em;
	cursor: pointer;
	font-family: roboto, sans-serif;

	border: 1px solid black;
	border-radius: 0px;
	padding: 0 0.5rem;

	background: linear-gradient(#EEE, #CCC);
}
.buttonContainer {
	padding: 1px;
	display: inline-block;
}
.buttonContainer button {
	margin: 0;
	height: 100%;
	overflow-y: hidden;
	/*
	padding: 0 0.5rem;
	background-color: #EEE;
	border: 2px solid gray;
	border-style: outset;
	border-radius: 0px;*/
/*	
	padding: 0 0.5rem;
	background-color: #DDD;
	border: 2px solid gray;
	border-color: white #333 #333 white;
	border-radius: 0px;*/
}

.buttonContainer > a {
	width: 100%;
	height: 100%;
	display: inline-block;
}
button:hover {
	border-color: #59E;
}

button[aria-selected="true"] {
	background: linear-gradient(#888, #AAA);
}

button:active {
	border-style: inset;
	background: linear-gradient(#DDD, #EEE);
}

/**********/

html:not(.f-loggedIn) .loggedIn,
html.f-loggedIn .loggedOut {
	display: none;
}

/*************
 ** Top Bar **
 *************/

html.f-error .loadBG {
	background-color: #800;
}

.pathSeparator {
	padding: 0 0.2rem;
}

.pathBar {
	font-weight: bold;
	padding: 0 0.2rem;
	/*box-shadow: inset 0 -2px 3px rgba(0,0,0,0.3);*/
}

#\$chatContainer {
	overflow-y: hidden;
}

.bottomBorder {
	border-bottom: 1px solid gray;
}

.border-list > *:not(:last-child),
.border-list-2 > * {
	border-bottom: 1px solid gray;
}

/**********
 ** Tabs **
 **********/
table.tabs {
	width: 100%;
	height: 1px; /* don't worry */
	table-layout: fixed;
}
table.tabs tbody, table.tabs tr, table.tabs td {
	height: 100%;
}
table.tabs td {
	margin: 0;
	padding: 0;
	text-align: center;
	border-right: 1px solid gray;
}

table.tabs td button {
	width: 100%;
	height: 2rem;
	border: none;
	vertical-align: top;
	font-size: 1em;
	padding: 0;
}

table.tabs td:last-child {
	border-right: none;
}

button[aria-selected="true"] {
	background-color: gray;
}
/* ... */

